# GameMgr

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-THIRD-PARTY.txt  README.md
Client/: CMakeLists.txt
Client/include/: Config.h  GUI.h  Global.h  Sync.h  Win32.h
Client/src/: ClientMain.cpp  Config.cpp  GUI.cpp  Global.cpp  Sync.cpp  Win32.cpp
Common/: CMakeLists.txt
Common/SyncLib/: SyncLib.py  SyncLibConfig.json
Common/include/: DataType.h  Log.h  Type.h
Common/src/: DataType.cpp  Log.cpp  Type.cpp
Server/: CMakeLists.txt
Server/include/: Context.h  Diff.h  Log.h
Server/src/: Diff.cpp  Log.cpp  ServerMain.cpp
